fix bad padding on mobile nav

--- a/app/styles/_list.scss
+++ b/app/styles/_list.scss
@@ -160,10 +160,6 @@
     }
 }
 
-.list-item--nav {
-    padding: 0.5rem 0 0;
-}
-
 .list-item--tiny {
     padding: 0.5rem 0;
     line-height: 12px;
